--- a/style.css
+++ b/style.css
@@ -7,64 +7,119 @@
   box-sizing: border-box;
 }
 
-button {
-  font: inherit;
-}
-
 body {
-  margin: 0 auto;
-  padding: 0 20vw;
+  font-family: 'Roboto', sans-serif;
+  background: linear-gradient(to bottom, #fff, #000);
+  height: 100vh;
 }
-
 
 h1 {
-  padding-top: 20px;
+  padding-top: 50px;
   text-align: center;
   font-size: 3em;
 }
 
 .container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 20px;
   min-height: calc(100vh - 20em);
-  margin: 5em 0;
+  max-width: 600px;
+  margin: 5em auto;
 }
 
-button {
-  font-size: 2em;
+.sub-container {
+  padding: 4em 0;
   text-wrap: nowrap;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 2em;
+  border: none;
+  border-radius: 20px;
+  text-align: center;
+  text-decoration: none;
 }
 
-#playWhiteNoiseButton,
-#stopWhiteNoiseButton {
+p {
+  font-size: 2em;
+}
+
+#whiteNoise {
   background-color: whitesmoke;
   color: #111;
-  border: none;
-  border-radius: 4px;
-  text-align: center;
-  text-decoration: none;
-  cursor: pointer;
 }
 
-#playBrownNoiseButton,
-#stopBrownNoiseButton {
+#brownNoise {
   background-color: brown;
   color: #fff;
-  border: none;
-  border-radius: 4px;
-  text-align: center;
-  text-decoration: none;
-  cursor: pointer;
 }
 
-#playPinkNoiseButton,
-#stopPinkNoiseButton {
+#pinkNoise {
   background-color: pink;
   color: #111;
-  border: none;
-  border-radius: 4px;
-  text-align: center;
-  text-decoration: none;
+}
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
   cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked+.slider {
+  background-color: #2196F3;
+}
+
+input:focus+.slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked+.slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
